--- a/.md
+++ b/.md
@@ -19,7 +19,9 @@
 ### Шаг 4 Запустите процесс сборки Tailwind CLI
 Запустите инструмент CLI, чтобы просмотреть файлы шаблонов на наличие классов и создать свой CSS.
 - npx tailwindcss -i ./src/assets/css/tailwind.pcss -o ./src/assets/css/main.css --watch
-
+## Шаг 5 Сборка проекта
+Сборка проекта для продакшена
+- npx tailwindcss -i ./src/assets/css/tailwind.pcss -o ./src/assets/css/main.css --minfy
 ## ps: После клонирования проекта с git
 - npm install -D tailwindcss
 - npx tailwindcss -i ./src/assets/css/tailwind.pcss -o ./src/assets/css/main.css --watch
